<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Create_Post_Fragment">

    <Button
        android:id="@+id/postButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/postButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cancelButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/postButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/createPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="sans-serif"
        android:text="@string/createPost"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/workoutLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/workoutLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="350dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/addWorkoutButton"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="284dp"
            android:layout_marginBottom="15dp"
            android:text="@string/addWorkoutButton"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/postWorkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="11dp"
            android:minHeight="48dp"
            android:text="@string/postWorkout" />

        <TextView
            android:id="@+id/postCaption"
            android:layout_width="222dp"
            android:layout_height="62dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="185dp"
            android:layout_marginBottom="7dp"
            android:ems="10"
            android:minHeight="48dp"
            android:text="@string/postCaption" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="450dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:text="@string/caption"
            android:textColor="@color/purple_700"
            android:textSize="20sp"
            android:textStyle="bold"
            android:translationX="5pt" />

        <EditText
            android:id="@+id/captionTextBox"
            android:layout_width="391dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/empty"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/captionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="236dp"
            android:text="@string/captionButton" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>