<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.FeedFragment">

    <ScrollView
        android:id="@+id/scrollFeed"
        android:layout_width="391dp"
        android:layout_height="644dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="26dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/feedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="670dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/FeedFilter"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:text="@string/filterTitle"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/RemoveFilter"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:text="@string/RemoveFilter"
            android:textSize="12sp" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:text="@string/addButton" />

        <Button
            android:id="@+id/ViewProfileButton"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/profile" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>